AC_INIT(pcm/oss/pcm_oss.c)
AM_INIT_AUTOMAKE(alsa-plugins, 1.0.10)
AC_PREFIX_DEFAULT(/usr)

AC_PROG_CC
AC_PROG_INSTALL
AC_DISABLE_STATIC
AM_PROG_LIBTOOL
AC_HEADER_STDC

PKG_CHECK_MODULES(ALSA, alsa >= 1.0.9)
AC_CHECK_LIB(asound, snd_pcm_ioplug_create,,
	     AC_ERROR([*** libasound has no external plugin SDK]), -ldl)

PKG_CHECK_MODULES(JACK, jack >= 0.98)

SAVE_PLUGINS_VERSION

AC_OUTPUT([
	Makefile
	pcm/Makefile
	pcm/oss/Makefile
	pcm/jack/Makefile
	ctl/Makefile
	ctl/oss/Makefile
])
