EXTRA_DIST =

if HAVE_OSS
EXTRA_DIST += README-pcm-oss
endif
if HAVE_MIX
EXTRA_DIST += upmix.txt vdownmix.txt
endif
if HAVE_JACK
EXTRA_DIST += README-jack
endif
if HAVE_PULSE
EXTRA_DIST += README-pulse
endif
if HAVE_MAEMO_PLUGIN
EXTRA_DIST += README-maemo
endif
if HAVE_SAMPLERATE
EXTRA_DIST += samplerate.txt
endif
if HAVE_A52
EXTRA_DIST += a52.txt
endif
if HAVE_LAVRATE
EXTRA_DIST += lavrate.txt
endif
if HAVE_PPH
EXTRA_DIST += speexrate.txt
endif
if HAVE_SPEEXDSP
EXTRA_DIST += speexdsp.txt
endif
if HAVE_ARCAMAV
EXTRA_DIST += README-arcam-av
endif
