EXTRA_DIST =

EXTRA_DIST += README-pcm-oss
EXTRA_DIST += upmix.txt vdownmix.txt
EXTRA_DIST += README-jack
EXTRA_DIST += README-pulse
EXTRA_DIST += README-maemo
EXTRA_DIST += samplerate.txt
EXTRA_DIST += a52.txt
EXTRA_DIST += aaf.txt
EXTRA_DIST += lavrate.txt
EXTRA_DIST += speexrate.txt
EXTRA_DIST += speexdsp.txt
EXTRA_DIST += README-arcam-av
